--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 
 PORT=3000
-MONGODB_URL=mongodb+srv://DiegoC:1234@cluster0.k3lgv.mongodb.net/
+MONGODB_URL=mongodb+srv://DiegoC:1234@cluster0.k3lgv.mongodb.net/todoNodeApp
